--- a/app/config/config.json
+++ b/app/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "munchies_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
@@ -16,7 +16,7 @@
   "production": {
     "username": "root",
     "password": null,
-    "database": "munchies_db",
+    "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
